apps/auth/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    spec:
      containers:
        - name: keycloak
          image: keycloak
          command: [ "kc.sh" ]
          args: [ "start-dev" ]
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 512Mi
              cpu: 1
            limits:
              memory: 2Gi
              cpu: 3
